# axial_needle_modeling

./: CMakeLists.txt  main.cpp
include/: identification.h  tcaf.h
include/matplot/: matplot.hpp
include/matplot/scripts/: python_matplot.py
share/: okamura_insertion.csv  okamura_model.csv
src/: identification.cpp  tcaf.cpp
